# HyperView

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  IMPLEMENTATION_NOTES.md  README.md  SCOPE_2.md  SCOPE_2_ALIGNMENT_SUMMARY.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  README.md  devcontainer.json  postCreateCommand.sh
docs/: architecture.md  datasets.md  index.html
frontend/: index.html  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.css  App.jsx  store.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: EmbeddingView.jsx  Header.jsx  Header.tsx  ImageGrid.jsx  ImageGrid.tsx  ScatterPanel.tsx  index.ts
frontend/src/lib/: api.ts
frontend/src/store/: useStore.ts
frontend/src/types/: index.ts
hyperview/: data_loader.py  database.py  main.py
notebooks/: demo.ipynb
poc/: bias_demonstration.py  hyperbolic_adapter.py
public/: index.html
scripts/: demo.py  export_frontend.sh
src/hyperview/: __init__.py  api.py  cli.py
src/hyperview/core/: dataset.py  sample.py
src/hyperview/embeddings/: __init__.py  compute.py  projection.py
src/hyperview/server/: app.py
src/hyperview/server/static/: 404.html  __next.__PAGE__.txt  __next._head.txt  __next._index.txt  __next._tree.txt  index.html  index.txt
src/hyperview/server/static/_next/static/chunks/: 19d0d66700a996ca.css  5f8e11d2476d2135.js  640b68f22e2796e6.js  6dd1fc7c515721e7.js  71c75872eed19356.js  8061f65b291e8aa9.css  89b87b2c88f720ee.js  9367d18603aececf.js  a7dc7061f42f51e9.js  c19ebe11de4d2730.js  turbopack-11ec5967a08af43c.js  turbopack-f85f95889fd14d61.js
src/hyperview/server/static/_next/static/lAwT6e3uaMqLUXxndbn_f/: _buildManifest.js
src/hyperview/server/static/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt  index.html
src/hyperview/storage/: __init__.py  backend.py  config.py  lancedb_backend.py  memory_backend.py  schema.py
